--- a/Cradle/pom.xml
+++ b/Cradle/pom.xml
@@ -239,7 +239,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<warName>abc</warName>
+					<warName>Cradle</warName>
 				</configuration>
 			</plugin>
 			<plugin>
