--- a/Cradle/src/main/resources/spring/database.properties
+++ b/Cradle/src/main/resources/spring/database.properties
@@ -1,7 +1,7 @@
-#database.driverClassName=com.mysql.jdbc.Driver
-#database.url=jdbc:mysql://localhost/cradle
+database.driverClassName=com.mysql.jdbc.Driver
+database.url=jdbc:mysql://localhost/cradle
 database.username=inotaku
 database.password=inotaku
 
-database.driverClassName=org.hsqldb.jdbc.JDBCDriver
-database.url=jdbc:hsqldb:mem:item
+#database.driverClassName=org.hsqldb.jdbc.JDBCDriver
+#database.url=jdbc:hsqldb:mem:item
