--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ Cartoon SMG/
 Cartoon Soldier/
 OtherImports/
 UniRx/
+SoundAssets/bgm_game_field
+SoundAssets/second-street-walk
+SoundAssets/bgm_maoudamashii_acoustic07
+SoundAssets/komorebi-no-kaze
+SoundAssets/Remember_Cello_Loop
