--- a/Cradle/src/main/webapp/WEB-INF/web.xml
+++ b/Cradle/src/main/webapp/WEB-INF/web.xml
@@ -24,11 +24,21 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<!-- - Location of the XML file that defines the root application context. 
 		- Applied by ContextLoaderListener. -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring/application-config.xml</param-value>
+		<param-value>classpath:spring/application-config.xml,/WEB-INF/security.xml</param-value>
 	</context-param>
 
 	<listener>
@@ -51,5 +61,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>dispatcherServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<error-page>
+	<error-code>403</error-code>
+	<location>/WEB-INF/view/error.jsp</location>
+	</error-page>
 
 </web-app>
